Overlay LinearLayout 연습 완료

--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -64,5 +64,5 @@
             android:layout_height="wrap_content"
             android:text="버튼6"
             />
-    </LinearLayout>s
+    </LinearLayout>
 </LinearLayout>
